F&GDEV/src/objects/State_Availability__c.object
<CustomObject>
    <description>Object utilized for Product Development efforts</description>
    <fields>
        <fullName>Approval_Date__c</fullName>
        <label>Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Launch_Date__c</fullName>
        <label>Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MarketingNameVersionDesc__c</fullName>
        <label>MarketingNameVersionDesc</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy_Form_Count__c</fullName>
        <description>Summarizes the total number of related Product State Policy Form Association Records.</description>
        <label>Policy Form Count</label>
        <summaryForeignKey>Product_State_Status__c.Product_State_Availability__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Policy_Forms_Approved__c</fullName>
        <description>Summarizes the number of approved policy forms on related product state policy form records.</description>
        <label>Policy Forms Approved</label>
        <summaryFilterItems>
            <field>Product_State_Status__c.Policy_Form_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </summaryFilterItems>
        <summaryForeignKey>Product_State_Status__c.Product_State_Availability__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Policy_Print_1_End__c</fullName>
        <label>Policy Print 1 End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Policy_Print_1_Start__c</fullName>
        <label>Policy Print 1 Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Policy_Print_2_End__c</fullName>
        <label>Policy Print 2 End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Policy_Print_2_Start__c</fullName>
        <label>Policy Print 2 Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Policy_Print_URL_1__c</fullName>
        <label>Policy Print URL - 1</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Policy_Print_URL_2__c</fullName>
        <label>Policy Print URL - 2</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Product_Specification__c</fullName>
        <label>Product Specification</label>
        <referenceTo>Product_Specification__c</referenceTo>
        <relationshipName>Product_State_Availabilities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Pull_Date__c</fullName>
        <label>Pull Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NC</fullName>
                </value>
                <value>
                    <fullName>ND</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NBS</fullName>
                </value>
                <value>
                    <fullName>Filing Targeted</fullName>
                </value>
                <value>
                    <fullName>Filed, Objection Pending</fullName>
                </value>
                <value>
                    <fullName>Filing Withdrawn</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Publishing</fullName>
                </value>
                <value>
                    <fullName>Launched</fullName>
                </value>
                <value>
                    <fullName>Pulled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Target_Launch_Date__c</fullName>
        <label>Target Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TranscationId__c</fullName>
        <formula>CASESAFEID(Product_Specification__r.Id )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TranscationId</label>
        <type>Text</type>
    </fields>
    <label>Product State</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Product_Specification__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Policy_Print_Assignment</fullName>
        <columns>NAME</columns>
        <columns>State__c</columns>
        <columns>Policy_Print_URL_1__c</columns>
        <columns>Policy_Print_1_Start__c</columns>
        <columns>Policy_Print_1_End__c</columns>
        <columns>Policy_Print_URL_2__c</columns>
        <columns>Policy_Print_2_Start__c</columns>
        <columns>Policy_Print_2_End__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>ProdTestFIA1</value>
        </filters>
        <label>Policy Print Assignment</label>
    </listViews>
    <listViews>
        <fullName>Prosperity_Elite_Series_test</fullName>
        <columns>State__c</columns>
        <columns>NAME</columns>
        <columns>Policy_Print_URL_1__c</columns>
        <columns>Status__c</columns>
        <columns>Launch_Date__c</columns>
        <columns>Target_Launch_Date__c</columns>
        <columns>Pull_Date__c</columns>
        <columns>Product_Specification__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Specification__c</field>
            <operation>contains</operation>
            <value>Prosperity Elite</value>
        </filters>
        <label>Prosperity Elite Series test</label>
    </listViews>
    <nameField>
        <label>Product State Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product States</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>